# Sylver

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  vcpkg.json
Sandbox/: main.cpp
SylverCommon/: CMakeLists.txt
SylverCommon/include/: Defines.hpp
SylverCommon/include/Config/: AppInfo.hpp  Config.hpp  EngineInfo.hpp
SylverCommon/include/Core/: Result.hpp  Version.hpp
SylverCommon/include/Event/: Events.hpp
SylverCommon/include/IO/: Files.hpp  Logger.hpp
SylverCommon/include/LibLoader/: LibLoader.hpp
SylverCommon/src/Config/: Config.cpp
SylverCommon/src/IO/: Logger.cpp
SylverEngine/: CMakeLists.txt
SylverEngine/src/: Entry.cpp
SylverEngine/src/Core/: Application.cpp  Application.hpp
SylverEngine/src/Window/: Window.cpp  Window.hpp
SylverEngine/src/Window/Platform/GLFW/: GLFW_Keys.hpp  GLFW_Window.cpp  GLFW_Window.hpp
SylverRuntime/: CMakeLists.txt
SylverRuntime/cmake/: ShaderHeader.cmake  Shaders.cmake
SylverRuntime/include/Renderer/: RenderSurface.hpp  RenderSurface_OpenGL.hpp  RenderSurface_Vulkan.hpp  Renderer.hpp  RendererBackend.hpp  Vertex.hpp  VertexArray.hpp
SylverRuntime/src/Renderer/: Renderer.cpp  RendererBackend.cpp
SylverRuntime/src/Renderer/Platform/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.hpp
SylverRuntime/src/Renderer/Platform/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.hpp
SylverRuntime/src/Renderer/Platform/Vulkan/Context/: VulkanContext.hpp
assets/: map.lvl
cmake/: Linux-x86-gcc.cmake  Shaders.cmake  ToolchainBase.cmake
docs/: BinaryFormatting.md  ModuleFormatting.md  Settings.md
include/: Defines.hpp  Sylver.hpp
include/Binary/: Reader.hpp
include/Common/: Optional.hpp  Result.hpp
licenses/: README.md
licenses/Vulkan-Headers/: LICENSE.md
licenses/glfw/: LICENSE.md
src/: CMakeLists.txt  Defines.hpp  Entity.cpp  Entity.hpp  Entry.cpp  Level.cpp  Level.hpp  Logger.cpp  Logger.hpp  Sprite.cpp  Sprite.hpp  Sylver.cpp  Vector.cpp  Vector.hpp  entry.cpp
src/Binary/: Binary.hpp  Reader.hpp  Writer.hpp
src/Common/: Result.hpp  Version.hpp
src/Core/: AppInfo.hpp  Application.cpp  Application.hpp  CMakeLists.txt  Config.cpp  Config.hpp  EngineInfo.hpp  Files.hpp  Logger.cpp  Logger.hpp
src/Entity/: Entity.hpp
src/Graphics/: CMakeLists.txt  Event.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
src/Graphics/Event/: Keys.hpp
src/Graphics/Renderer/: CMakeLists.txt  Camera.cpp  Camera.hpp  MVP.hpp  Shader.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp
src/Graphics/Renderer/Common/: Object.hpp  Texture.hpp  Vertex.hpp
src/Graphics/Renderer/Platform/OpenGL/: CMakeLists.txt  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp
src/Graphics/Renderer/Platform/OpenGL/Shaders/: Basic.vert  Solid.frag
src/Graphics/Renderer/Platform/Vulkan/: CMakeLists.txt  VulkanContext.cpp  VulkanContext.hpp  VulkanDebugMessenger.cpp  VulkanDebugMessenger.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanVertex.hpp
src/Graphics/Renderer/Platform/Vulkan/Backend/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanDevice.cpp  VulkanHelpers.cpp  VulkanPipeline.cpp  VulkanShaderModule.cpp  VulkanShaderModule.hpp  VulkanShared.hpp  VulkanSwapchain.cpp
src/Graphics/Renderer/Platform/Vulkan/Shaders/: Basic.vert  Main.vert  Solid.frag  Texture.frag
src/Graphics/Window/Platform/GLFW/: CMakeLists.txt  GLFW_Keys.hpp  GLFW_Window.cpp  GLFW_Window.hpp
src/Modules/: CMakeLists.txt  Module.cpp  Module.hpp
src/Resources/: Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp
src/Settings/: Settings.hpp  SettingsReader.hpp
