cmake_minimum_required(VERSION 3.22)

project(Sylver LANGUAGES C CXX)

set(PROJECT_VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

cmake_host_system_information(RESULT SYLVER_HOST_OS QUERY OS_NAME)
cmake_host_system_information(RESULT SYLVER_HOST_ARCH QUERY OS_PLATFORM)
set(SYLVER_TARGET_OS ${SYLVER_HOST_OS})
set(SYLVER_TARGET_ARCH ${SYLVER_HOST_ARCH})

if(SYLVER_HOST_OS STREQUAL "Windows")
    set(SYLVER_TARGET_OS Win32)
    list(APPEND SYLVER_DEFINES SYLVER_PLATFORM_WINDOWS)
elseif(SYLVER_HOST_OS STREQUAL "Linux")
    set(SYLVER_TARGET_OS Linux)
    list(APPEND SYLVER_DEFINES SYLVER_PLATFORM_LINUX)
    list(APPEND SYLVER_DEFINES SYLVER_PLATFORM_UNIX)
elseif(SYLVER_HOST_OS STREQUAL "Darwin")
    set(SYLVER_TARGET_OS Mac)
    list(APPEND SYLVER_DEFINES SYLVER_PLATFORM_MAC)
    list(APPEND SYLVER_DEFINES SYLVER_PLATFORM_UNIX)
else()
    message(FATAL "Unknown OS")
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    list(APPEND SYLVER_DEFINES SYLVER_DEBUG)
endif()

set(SYLVER_APPLICATION_NAME "Sylver")
set(SYLVER_OUTPUT_DIR ${CMAKE_SOURCE_DIR}/bin)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SYLVER_OUTPUT_DIR}/${SYLVER_APPLICATION_NAME})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${SYLVER_OUTPUT_DIR}/${SYLVER_APPLICATION_NAME})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

add_subdirectory(SylverCommon)
add_subdirectory(SylverRuntime)
add_subdirectory(SylverEngine)
